# calibrate-lens

./: README.rst  circle1.py  circle10.py  circle11.py  circle12.py  circle13.py  circle14.py  circle15.py  circle2.py  circle3.py  circle4.py  circle5.py  circle6.py  circle7.py  circle8.py  circle9.py  main.py  pyproject.toml  pytest_helpers.py  requirements.txt  requirements_dev.txt  runningnotes.rst  spathprojection.py  sunpositions.py  temp.py  test_spathprojection.py  trans1.py  trans2.py  trans3.py  trans4.py  trans5.py  trans6.py  trans7.py  trans8.py
